# modelica-builder

./: .cspell.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  LICENSE.txt  README.md  README.rst  generate_parser.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.cfgx  setup.py  tox.ini
.cspell/: custom-dictionary.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi_release.yml
antlr/: Dockerfile
docs/: Makefile  conf.py  index.rst
docs/api/: modelica_builder.modelica_parser.rst  modelica_builder.rst  modules.rst
examples/: change_component_arg.py  custom_connect_clause_selector.py
management/: update_licenses.py
modelica_builder/: __init__.py  builder.py  config.py  edit.py  model.py  modelica_mos_file.py  modelica_project.py  package_parser.py  selector.py  transformation.py  transformer.py
modelica_builder/measures/: measure_base.py
modelica_builder/modelica_parser/: README.rst  __init__.py  modelica.g4  modelica.interp  modelicaLexer.interp  modelicaLexer.py  modelicaListener.py  modelicaParser.py  utils.py
modelica_builder/templates/: package.mot  package_base.mot
modelicabuilder/: __init__.py  edit.py  selector.py  transformation.py  transformer.py
modelicabuilder/modelicaparser/: __init__.py  modelica.interp  modelicaListener.py  modelicaParser.py
src/modelica_builder/: builder.py  edit.py  model.py  selector.py  transformation.py  transformer.py
src/modelica_builder/modelica_parser/: modelica.g4  modelica.interp  modelicaListener.py  modelicaParser.py  sa_modelica.py  utils.py
src/modelica_builder/modelica_parser/cpp_src/: modelica.interp  modelica.tokens  modelicaBaseListener.cpp  modelicaBaseListener.h  modelicaBaseVisitor.cpp  modelicaBaseVisitor.h  modelicaLexer.cpp  modelicaLexer.h  modelicaLexer.interp  modelicaListener.cpp  modelicaListener.h  modelicaParser.cpp  modelicaParser.h  modelicaVisitor.cpp  modelicaVisitor.h  sa_modelica_cpp_parser.cpp  sa_modelica_translator.cpp  sa_modelica_translator.h
tests/: conftest.py  test_benchmarks.py  test_builder.py  test_components.py  test_connects.py  test_edit.py  test_model.py  test_modelica_measure.py  test_modelica_mos.py  test_modelica_project.py  test_package_parser.py  test_selector.py  tests.py
tests/data/: B2_no_water_load.mos  DCMotor.mo  DCMotorCRLF.mo  Office.mo  district.mo
tests/data/measures/set_argument_value/: measure.py
tests/output/: DCMotor_01.mo  DCMotor_02.mo
