[tool.poetry]
name = "modelica-builder"
version = "0.5.2-rc3"
description = "Modelica builder enables programmatic parsing and modification of Modelica files."
authors = ["Nicholas Long <nicholas.long@nrel.gov>", "Nathan Moore <nathan.moore@nrel.gov>"]
license = "BSD-3-Clause"

readme = "README.rst"

homepage = "https://github.com/urbanopt/modelica-builder/releases"
repository = "https://github.com/urbanopt/modelica-builder"
documentation = "https://github.com/urbanopt/modelica-builder"
keywords = ["Modelica", "Physics-based Modeling", "Abstract Syntax Tree", "AST"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
# Urbanopt SDK requires Python 3.10 as of UOv0.9.0
python = ">=3.9, <3.13"
antlr4-python3-runtime = "4.13.1"
jinja2 = "3.1.4"
pathspec = "^0.11.2"
certifi = "^2024.8.30"

[tool.poetry.dev-dependencies]
autopep8 = "~2.0"
coveralls = "~3.3"
mypy = "~1.5"
pre-commit = "~3.4"
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-benchmark = "~4.0.0"
# don't update sphinx right now
sphinx = "~7.2"
sphinx_rtd_theme = "~1.3"
sphinx-jsonschema = "~1.19"
syrupy = "~4.5"
toml = "~0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.isort]
multi_line_output = 3
