# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = modelica-builder
description = Modelica builder enables parsing and modification of Modelica files
version = 0.2.2
author = Nicholas Long
author_email = nicholas.long@nrel.gov
license = BSD-3 Clause
url = https://github.com/urbanopt/modelica-builder
project_urls =
    Documentation = https://github.com/urbanopt/modelica-builder
    Source = https://github.com/urbanopt/modelica-builder
    Changelog = https://github.com/urbanopt/modelica-builder/blob/main/CHANGELOG.rst
    Tracker = https://github.com/urbanopt/modelica-builder/issues
    Download = https://github.com/urbanopt/modelica-builder/releases
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = antlr4-python3-runtime==4.8
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install modelica-builder[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov modelica_builder --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[coverage:run]
omit =
    modelica_builder/modelica_parser/*.py

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    modelica_builder/modelica_parser
ignore=E402,E501,E731,W503,W504
max-line-length=100
