# content of pytest.ini
# setup.cfg files should use [tool:pytest] section instead
[metadata]
description-file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
zip_safe = False
packages = find:
include_package_data = True
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = antlr4-python3-runtime==4.8
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov

[options.packages.find]
exclude =
    tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov modelica_builder --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    docs/build
testpaths = tests

[coverage:run]
omit =
    modelica_builder/modelica_parser/*.py

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    build
    dist
    .eggs
    docs/build
    docs/conf.py
    modelica_builder/modelica_parser
ignore=E402,E501,E731,W503,W504
max-line-length=100
